css/newlayout.css
html, body {
    margin: 0;
    padding: 0;
}

body {
    display: grid;
    grid-row-gap: 3%;
    grid-column-gap: 3%;
    grid-template-columns: 1fr 1fr 4fr 1fr;
    grid-template-rows: 110px 40px 60em 75px;
    grid-template-areas:
        "gutter-left   header    header      gutter-right"
        "gutter-left   .         page-title  gutter-right"
        "gutter-left   nav       content     gutter-right"
        "gutter-left   .         footer      gutter-right";
}

header {
    grid-area: header;
}

.headertext {
    display: block;
    float: left;
}

.header-img {
    display: block;
    float: right;
    width: 16%;
}

.headNav {
    grid-area: nav;
    display: grid;
    grid-column-gap: 10px;
    grid-template-rows: repeat(auto-fit, minmax(30px, 75px));
}

.navlink {
    text-align: center;
    align-self: center;
    justify-self: stretch;
}

.content {
    grid-area: content;
    overflow-x: hidden;
    overflow-y: visible;
}

footer {
    grid-area: footer;
    grid-column: 1 / -1;
    display: flex;
    flex-direction: row;
    justify-content: space-around;
}

.footer-text {
    transform: translateY(50%);
}

.footer-contact {
    transform: translateY(25%);
    display: flex;
    flex-direction: column;
}

.footer-contact-item {
    text-decoration: none;
}

.resume {
    transform: translateX(-50%);
}

.email {
    transform: translateX(50%);
}

@media screen and (max-width: 600px) {
    body {
        grid-template-columns: 100%;
        grid-template-rows: 115px 300px 2fr 100px;
        grid-template-areas:
            "header"
            "nav"
            "content"
            "footer";
        grid-row-gap: 1%;
    }

    header {
        font-size: 10px;
    }

    .header-img {
        display: none;
    }

    .headNav {
        grid-area: nav;
        display: grid;
        grid-row-gap: 10px;
        grid-template-rows: repeat(auto-fit, minmax(30px, 75px));
    }

    .navlink {
        text-align: center;
        justify-content: center;
        align-self: center;
        justify-self: stretch;
    }

    footer {
        grid-area: footer;
        grid-column: 1 / -1;
        display: flex;
        flex-direction: column;
        justify-content: space-around;
    }

    .footer-text {
        transform: translateX(30%);
    }

    .footer-contact {
        display: inline-block;
        transform: translate(25%, -25%);
    }
}

